--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.12.4",
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "chess.js": "^1.0.0-beta.8",
     "cra-template": "1.2.0",
-    "react": "^19.0.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "graphql": "^16.10.0",
+    "graphql-request": "^7.1.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.2",
+    "react": "^18.2.0",
     "react-chessboard": "^4.7.2",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
